Fix Vertical Spacing in Feed View
This adds a 1rem margin between videos in the vertical feed view.

--- a/app/assets/stylesheets/global/_base.scss
+++ b/app/assets/stylesheets/global/_base.scss
@@ -289,7 +289,7 @@ video {
 }
 
 .user-video {
-  margin: 0 auto;
+  margin: 1rem auto;
   @include media(medium) {
     width: 100%;
   }
